K8_Fundamentals/manifests/networkpolicygreentoblue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-green-to-blue
spec:
  podSelector:
    matchLabels:
      app: nginx-green
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx-blue
